--- a/ejemplo1/proyectoUno/administrativo/templates/obtener_estudiante.html
+++ b/ejemplo1/proyectoUno/administrativo/templates/obtener_estudiante.html
@@ -1,4 +1,6 @@
-
+{% extends "master.html" %}
+{% block tittle}
+% block content %}
 <h3>Datos de estudiante</h3>
 
 <p><b>Nombre:</b>{{estudiante.nombre}}</p>
@@ -7,4 +9,6 @@
 
 <br/>
 [<a href="{% url 'index' %}">inicio</a>]
+{% endblock %}
+
 
