--- a/ejemplo1/proyectoUno/administrativo/templates/crearNumeroTelefonico.html
+++ b/ejemplo1/proyectoUno/administrativo/templates/crearNumeroTelefonico.html
@@ -1,3 +1,10 @@
+{% extends "master.html" %}
+{% block tittle}
+Crear telefono
+{% endblock %}
+
+{% block content
+
 <h2>Crear Número Telefónico</h3>
 
 <form action="" method="post">
@@ -10,3 +17,6 @@
 </form>
 
 [<a href="{% url 'index' %}">inicio</a>]
+
+{% endblock %}
+
